// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment renders correctly 1`] = `
<div
  className="css-view-1dbjc4n r-flexDirection-18u37iz r-paddingBottom-1mi0q7o r-paddingLeft-1hfyk0a r-paddingRight-1qfoi16 r-paddingTop-m611by"
>
  <div
    className="css-view-1dbjc4n r-marginRight-zso239"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "backgroundColor": "rgba(98,0,238,1.00)",
          "borderBottomLeftRadius": "30px",
          "borderBottomRightRadius": "30px",
          "borderTopLeftRadius": "30px",
          "borderTopRightRadius": "30px",
          "height": "60px",
          "width": "60px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        style={
          Object {
            "borderBottomLeftRadius": "30px",
            "borderBottomRightRadius": "30px",
            "borderTopLeftRadius": "30px",
            "borderTopRightRadius": "30px",
            "height": "60px",
            "width": "60px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
          style={
            Object {
              "backgroundImage": "url(\\"https://vcdn-ngoisao.vnecdn.net/2018/01/19/1-8515-1516314392.jpg\\")",
            }
          }
        />
        <img
          alt=""
          className="css-accessibilityImage-9pa8cd"
          draggable={false}
          src="https://vcdn-ngoisao.vnecdn.net/2018/01/19/1-8515-1516314392.jpg"
        />
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n r-flex-13awgt0"
  >
    <div
      className="css-view-1dbjc4n r-flexDirection-18u37iz"
    >
      <div
        className="css-text-76zvg2 r-fontSize-1b43r93"
        dir="auto"
      >
        Andy
      </div>
      <div
        className="css-text-76zvg2 r-fontSize-1b43r93 r-marginLeft-1f6r7vd r-marginRight-7o8qx1"
        dir="auto"
      >
        -
      </div>
      <div
        className="css-text-76zvg2 r-fontSize-1b43r93"
        dir="auto"
      >
         from now
      </div>
    </div>
    <div
      className="css-text-76zvg2 r-fontSize-ubezar r-marginTop-1g94qm0"
      dir="auto"
    >
      
    </div>
  </div>
</div>
`;

exports[`Comment renders correctly user comment 1`] = `
<div
  className="css-view-1dbjc4n r-flexDirection-18u37iz r-paddingBottom-1mi0q7o r-paddingLeft-1hfyk0a r-paddingRight-1qfoi16 r-paddingTop-m611by"
>
  <div
    className="css-view-1dbjc4n r-marginRight-zso239"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "backgroundColor": "rgba(98,0,238,1.00)",
          "borderBottomLeftRadius": "30px",
          "borderBottomRightRadius": "30px",
          "borderTopLeftRadius": "30px",
          "borderTopRightRadius": "30px",
          "height": "60px",
          "width": "60px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        style={
          Object {
            "borderBottomLeftRadius": "30px",
            "borderBottomRightRadius": "30px",
            "borderTopLeftRadius": "30px",
            "borderTopRightRadius": "30px",
            "height": "60px",
            "width": "60px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
          style={
            Object {
              "backgroundImage": "url(\\"https://vcdn-ngoisao.vnecdn.net/2018/01/19/1-8515-1516314392.jpg\\")",
            }
          }
        />
        <img
          alt=""
          className="css-accessibilityImage-9pa8cd"
          draggable={false}
          src="https://vcdn-ngoisao.vnecdn.net/2018/01/19/1-8515-1516314392.jpg"
        />
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n r-flex-13awgt0"
  >
    <div
      className="css-view-1dbjc4n r-flexDirection-18u37iz"
    >
      <div
        className="css-text-76zvg2 r-fontSize-1b43r93"
        dir="auto"
      >
        Andy
      </div>
    </div>
    <div
      className="css-text-76zvg2 r-fontSize-ubezar r-marginTop-1g94qm0"
      dir="auto"
    >
      on  from now
    </div>
  </div>
</div>
`;
